First commited as before_64030_rev2

--- a/org.eclipse.egit.gitflow.test/pom.xml
+++ b/org.eclipse.egit.gitflow.test/pom.xml
@@ -15,13 +15,17 @@
 	<parent>
 		<groupId>org.eclipse.egit</groupId>
 		<artifactId>egit-parent</artifactId>
-		<version>4.2.0-SNAPSHOT</version>
+		<version>4.3.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>org.eclipse.egit.gitflow.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 
 	<name>GitFlow Test Plug-in</name>
+
+	<properties>
+		<coretest.vmparams></coretest.vmparams>
+	</properties>
 
 	<build>
 		<plugins>
