--- a/org.eclipse.egit.core.test/pom.xml
+++ b/org.eclipse.egit.core.test/pom.xml
@@ -24,6 +24,10 @@
 
   <name>EGit Core Test Plug-in</name>
 
+  <properties>
+    <coretest.vmparams></coretest.vmparams>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
