--- a/org.eclipse.egit.gitflow.test/pom.xml
+++ b/org.eclipse.egit.gitflow.test/pom.xml
@@ -23,6 +23,10 @@
 
 	<name>GitFlow Test Plug-in</name>
 
+	<properties>
+		<coretest.vmparams></coretest.vmparams>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
