--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -707,12 +707,6 @@ HistoryPreferencePage_MaxTagLength=&Maximum characters to show for a tag:
 HistoryPreferencePage_ShowGroupLabel=Show
 HistoryPreferencePage_ShowInRevCommentGroupLabel=Show in Revision Comment
 
-PullWizardPage_PageName=PullWizardPage
-PullWizardPage_PageTitle=Pull
-PullWizardPage_PageMessage=Configure a pull operation to import remote changes.
-PullWizardPage_referenceLabel=Reference:
-PullWizardPage_referenceTooltip=Reference can be a branch, a tag, a commit id...
-PullWizardPage_ChooseReference=Please select a reference to pull from remote \"{0}\"
 PullOperationUI_ConnectionProblem=Git connection problem.\
 \n\nMaybe you are offline or behind a proxy.\nCheck your network connection and proxy configuration.
 PullOperationUI_NotTriedMessage=Not tried
@@ -1034,10 +1028,10 @@ CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 
 DateFormatPreferencePage_title=Date Format
-DateFormatPreferencePage_formatChooser_label=&Format:
-DateFormatPreferencePage_formatInput_label=Date format:
+DateFormatPreferencePage_formatChooser_label=Format
+DateFormatPreferencePage_formatInput_label=Date format
 DateFormatPreferencePage_invalidDateFormat_message=Not a valid date format
-DateFormatPreferencePage_datePreview_label=Date preview:
+DateFormatPreferencePage_datePreview_label=Date preview
 DateFormatPreferencePage_choiceGitDefault_label=Git default format
 DateFormatPreferencePage_choiceGitLocal_label=Git local format
 DateFormatPreferencePage_choiceGitRelative_label=Git relative date format
@@ -1058,7 +1052,7 @@ DateFormatPreferencePage_helpGitRfc_label=Time of the commit in the committer's 
 DateFormatPreferencePage_helpGitShort_label=Date of the commit in the committer's time zone, without time; year-month-day.
 DateFormatPreferencePage_helpGitLocale_label=Time of the commit in the committer's time zone in your system format, with time zone.
 DateFormatPreferencePage_helpGitLocaleLocal_label=Time of the commit converted to your local time zone in your system format, without time zone.
-DateFormatPreferencePage_helpCustom_label=Time of the commit converted to your local time zone in the format specified.
+DateFormatPreferencePage_helpCustom_label=Time of the commit in the committer's time zone in the format specified.
 
 BasicConfigurationDialog_ConfigLocationInfo=These settings will be stored in the Git configuration file in your home directory.
 BasicConfigurationDialog_DialogMessage=When creating a commit, Git records name and e-mail of author and committer. Please fill in the information so that your commits are correctly attributed.
