--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
     <tycho.scmUrl>scm:git:https://git.eclipse.org/r/egit/egit.git</tycho.scmUrl>
     <test.vmparams></test.vmparams>
     <coretest.vmparams></coretest.vmparams>
-    <uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Dorg.eclipse.swtbot.screenshots.dir=target/screenshots -Xmx1024m -XX:MaxPermSize=150m</uitest.vmparams>
+    <uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Xmx1024m -XX:MaxPermSize=150m</uitest.vmparams>
   </properties>
 
   <profiles>
@@ -361,12 +361,6 @@
             <encoding>UTF-8</encoding>
             <source>1.7</source>
             <target>1.7</target>
-            <!-- Do not use useProjectSettings; it'll always override -nowarn -->
-            <compilerArgs>
-              <arg>-properties</arg>
-              <arg>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</arg>
-              <arg>-nowarn</arg>
-            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
