--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1174,7 +1174,6 @@ DecoratorPreferencesPage_preview=Preview:
 DecoratorPreferencesPage_fileFormatLabel=&Files:
 DecoratorPreferencesPage_folderFormatLabel=F&olders:
 DecoratorPreferencesPage_projectFormatLabel=&Projects:
-DecoratorPreferencesPage_submoduleFormatLabel=&Submodules:
 DecoratorPreferencesPage_labelDecorationsLink=See <a>''{0}''</a> to enable or disable Git decorations.
 DecoratorPreferencesPage_colorsAndFontsLink=See <a>''{0}''</a> to configure the font and color decorations.
 DecoratorPreferencesPage_generalTabFolder=&General
@@ -1806,7 +1805,7 @@ StagingView_LinkSelection=Link with Editor and Selection
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
 StagingView_UnstageItemMenuLabel=&Remove from Index
-StagingView_UnstagedSort=Sort alphabetically
+StagingView_UnstagedSort=Sort by state
 StagingView_StageItemMenuLabel=&Add to Index
 StagingView_IgnoreItemMenuLabel=&Ignore
 StagingView_DeleteItemMenuLabel=&Delete
