--- a/org.eclipse.egit.ui.importer.tests/pom.xml
+++ b/org.eclipse.egit.ui.importer.tests/pom.xml
@@ -26,7 +26,7 @@
 						<extraRequirements>
 							<requirement>
 								<type>eclipse-plugin</type>
-								<id>org.eclipse.egit.ui.smartimport</id>
+								<id>org.eclipse.egit.ui.importer</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
 						</extraRequirements>
