First commited as before_68993_rev10

--- a/org.eclipse.egit.repository/pom.xml
+++ b/org.eclipse.egit.repository/pom.xml
@@ -133,6 +133,10 @@
             <url>http://download.eclipse.org/webtools/releng/repository</url>
             <layout>p2</layout>
            </repository>
+           <repository>
+            <url>http://download.eclipse.org/releases/mars</url>
+            <layout>p2</layout>
+           </repository>
           </repositories>
          </configuration>
         </execution>
