--- a/org.eclipse.egit.ui.importer/pom.xml
+++ b/org.eclipse.egit.ui.importer/pom.xml
@@ -7,10 +7,10 @@
 		<version>4.4.0-SNAPSHOT</version>
 		<artifactId>egit-parent</artifactId>
 	</parent>
-	<artifactId>org.eclipse.egit.ui.smartimport</artifactId>
+	<artifactId>org.eclipse.egit.ui.importer</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
-	<name>Git Team Provider (auto-import wizard)</name>
+	<name>Git Team Provider (experimental auto-import wizard, incubation)</name>
 
 	<build>
 		<plugins>
