--- a/org.eclipse.egit.ui.test/pom.xml
+++ b/org.eclipse.egit.ui.test/pom.xml
@@ -90,6 +90,7 @@
           </includes>
           <useUIHarness>true</useUIHarness>
           <useUIThread>false</useUIThread>
+          <product>org.eclipse.sdk.ide</product>
           <argLine>${ui.test.vmargs}</argLine>
           <application>org.eclipse.ui.ide.workbench</application>
         </configuration>
