--- a/org.eclipse.egit.repository/pom.xml
+++ b/org.eclipse.egit.repository/pom.xml
@@ -134,7 +134,7 @@
             <layout>p2</layout>
            </repository>
            <repository>
-            <url>http://download.eclipse.org/staging/neon/</url>
+            <url>http://download.eclipse.org/releases/staging</url>
             <layout>p2</layout>
            </repository>
           </repositories>
