--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -1706,6 +1706,20 @@
          </activeWhen>
       </handler>
       <handler
+            commandId="org.eclipse.ui.file.refresh">
+         <class
+               class="org.eclipse.egit.ui.internal.repository.tree.command.RefreshCommand">
+         </class>
+         <activeWhen>
+             <with
+                   variable="activePartId">
+                <equals
+                        value="org.eclipse.egit.ui.RepositoriesView">
+                </equals>
+             </with>
+          </activeWhen>
+      </handler>
+      <handler
             commandId="org.eclipse.egit.ui.RepositoriesViewRemoveRemote">
          <class
                class="org.eclipse.egit.ui.internal.repository.tree.command.RemoveRemoteCommand">
@@ -1772,31 +1786,6 @@
                      </instanceof>
                   </iterate>
                </and>
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.RenameBranch"
-            class="org.eclipse.egit.ui.internal.actions.RenameBranchActionHandler">
-         <activeWhen>
-            <test property="GitSelection.projectsSingleRepository" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.ui.edit.rename"
-            class="org.eclipse.egit.ui.internal.history.command.RenameBranchOnCommitHandler">
-         <activeWhen>
-            <and>
-               <with
-                     variable="activePartId">
-                  <equals
-                        value="org.eclipse.team.ui.GenericHistoryView">
-                  </equals>
-               </with>
-               <count value="1" />
-               <iterate>
-                  <instanceof value="org.eclipse.egit.ui.internal.history.SWTCommit" />
-               </iterate>
-            </and>
          </activeWhen>
       </handler>
       <handler
@@ -3846,7 +3835,9 @@
                visible="true">
          </separator>
          <command
-               commandId="org.eclipse.egit.ui.RepositoriesViewRefresh"
+               commandId="org.eclipse.ui.file.refresh"
+               icon="icons/obj16/refresh.gif"
+               disabledIcon="icons/obj16/refresh.gif"
                style="push">
          </command>
          <command
@@ -3891,8 +3882,8 @@
                visible="true">
          </separator>
          <command
-               commandId="org.eclipse.egit.ui.RepositoriesViewRefresh"
-               label="%RepoViewRefreshViewMenu.label"
+               commandId="org.eclipse.ui.file.refresh"
+               icon="icons/obj16/refresh.gif"
                style="push">
          </command>
          <command
@@ -4834,15 +4825,15 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
-            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.PasteCommand"
-            id="org.eclipse.egit.ui.RepositoriesViewPaste"
-            name="%PastePathCommand">
+            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.RenameBranchCommand"
+            id="org.eclipse.egit.ui.RepositoriesViewRenameBranch"
+            name="%RenameBranchCommand">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
-            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.RefreshCommand"
-            id="org.eclipse.egit.ui.RepositoriesViewRefresh"
-            name="%RefreshCommand">
+            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.PasteCommand"
+            id="org.eclipse.egit.ui.RepositoriesViewPaste"
+            name="%PastePathCommand">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
@@ -5042,10 +5033,6 @@
       <image
             commandId="org.eclipse.egit.ui.RepositoriesViewClone"
             icon="icons/obj16/cloneGit.gif">
-      </image>
-      <image
-            commandId="org.eclipse.egit.ui.RepositoriesViewRefresh"
-            icon="icons/obj16/refresh.gif">
       </image>
       <image
             commandId="org.eclipse.egit.ui.RepositoriesLinkWithSelection"
@@ -5342,6 +5329,10 @@
       <image
             commandId="org.eclipse.egit.ui.team.stash.create"
             icon="icons/obj16/stash-create.png">
+      </image>
+      <image
+            commandId="org.eclipse.egit.ui.history.RenameBranch"
+            icon="icons/obj16/editconfig.gif">
       </image>
       <image
             commandId="org.eclipse.egit.ui.history.ShowBlame"
@@ -5647,8 +5638,9 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.RenameBranchActionHandler"
             id="org.eclipse.egit.ui.team.RenameBranch"
-            name="%RenameBranchCommand">
+            name="%RenameBranchCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
@@ -5752,6 +5744,11 @@
             defaultHandler="org.eclipse.egit.ui.internal.history.command.DeleteBranchOnCommitHandler"
             id="org.eclipse.egit.ui.history.DeleteBranch"
             name="%DeleteBranchCommand">
+      </command>
+      <command
+            defaultHandler="org.eclipse.egit.ui.internal.history.command.RenameBranchOnCommitHandler"
+            id="org.eclipse.egit.ui.history.RenameBranch"
+            name="%RenameBranchCommand">
       </command>
       <command
             defaultHandler="org.eclipse.egit.ui.internal.history.command.CreateTagOnCommitHandler"
