First commited as before_74682_rev5

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -152,6 +152,8 @@ RevertCommitOperation_reverting=Reverting {0} commits
 RewordCommitOperation_rewording=Rewording commit {0}
 EditCommitOperation_editing=Editing commit {0}
 
+GitLazyResourceVariantTreeSubscriber_name=Git (Aware of Logical Models)
+
 IgnoreOperation_error=Unable to ignore resources
 IgnoreOperation_parentOutsideRepo=Cannot add to gitignore. The parent of {0} is outside the Git repository {1}
 IgnoreOperation_creatingFailed=creating {0} failed
