--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -679,7 +679,7 @@ HistoryPage_authorColumn=Author
 HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
-HistoryPage_findbar_find=Find:
+HistoryPage_findbar_find=Search in history for ''{0}''
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -749,10 +749,6 @@ PushBranchWizard_WindowTitle=Push Branch {0}
 PushCommitHandler_pushCommitTitle=Push Commit
 PushOperationUI_MultiRepositoriesDestinationString={0} repositories
 PushOperationUI_PushJobName=Push to {0}
-
-RepositoryJob_NullStatus=Internal error: job ''{0}'' returned a null status.
-RepositoryJobResultAction_RepositoryGone=Cannot find git repository ''{0}'' anymore: result cannot be shown.
-ShowPushResultAction_name=Show Push Result...
 
 PushWizard_cantConnectToAny=Can''t connect to any repository: {0}
 PushWizard_cantPrepareUpdatesMessage=Can't resolve ref specifications locally (local refs changed?) or create tracking ref update.
@@ -933,7 +929,6 @@ PushToGerritWizard_Title=Push the current HEAD to Gerrit
 FetchAction_wrongURITitle=Corrupted Configuration
 FetchAction_wrongURIMessage=Remote repositories URIs configuration is corrupted.
 FetchOperationUI_FetchJobName=Fetch from {0}
-FetchOperationUI_ShowFetchResult=Show Fetch Result...
 
 FetchDestinationPage_PageTitle=Please select a fetch destination
 FetchDestinationPage_CouldNotGetBranchesMessage=Could not obtain tracking branches
