--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -74,7 +74,9 @@ WizardProjectsImportPage_projectsInWorkspace = Some or all projects cannot be im
 WizardProjectsImportPage_CreateProjectsTask = Creating Projects
 WizardProjectsImportPage_filterText = type filter text to filter unselected projects
 
-SecureStoreUtils_writingCredentialsFailed=Writing to secure store failed
+SecureStoreUtils_errorClearingCredentials=Failed to clear credentials for ''{0}'' from secure store
+SecureStoreUtils_errorReadingCredentials=Failed to read credentials for ''{0}'' from secure store
+SecureStoreUtils_writingCredentialsFailed=Failed to write credentials for ''{0}'' to secure store
 SelectResetTypePage_labelCurrentHead=Current HEAD:
 SelectResetTypePage_labelResettingTo=Resetting to:
 SelectResetTypePage_PageMessage=Select the type of reset to perform
@@ -101,8 +103,6 @@ GerritConfigurationPage_pushUri=&Push URI
 GerritConfigurationPage_title=Gerrit Configuration
 GerritConfigurationPage_UserLabel=&User:
 
-EGitCredentialsProvider_errorReadingCredentials=Failed reading credentials from secure store
-EGitCredentialsProvider_FailedToClearCredentials=Failed to clear credentials for {0} stored in secure store
 EGitCredentialsProvider_question=Question
 EGitCredentialsProvider_information=Information
 CustomPromptDialog_provide_information_for=Provide information for {0}
@@ -519,6 +519,7 @@ CloneDestinationPage_promptRemoteName=Remote na&me
 CloneDestinationPage_browseButton=Bro&wse
 CloneDestinationPage_cloneSubmodulesButton=Clone &submodules
 CloneDestinationPage_DefaultRepoFolderTooltip=You can change the default parent folder in the Git preferences
+CloneDestinationPage_errorDirectoryRequired=Directory is required
 CloneDestinationPage_errorInitialBranchRequired=Initial branch is required
 CloneDestinationPage_errorInvalidRemoteName=Invalid remote name ''{0}''
 CloneDestinationPage_errorNotEmptyDir={0} is not an empty directory.
@@ -645,7 +646,7 @@ ResetTargetSelectionDialog_AuthorLabel=Author:
 ResetTargetSelectionDialog_CommitLabel=Commit:
 ResetTargetSelectionDialog_CommitterLabel=Committer:
 ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' state.
-ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
+ResetTargetSelectionDialog_ExpressionLabel=Reset to (&expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
 ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
@@ -735,7 +736,7 @@ PushBranchPage_RemoteBranchNameLabel=Branch:
 PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
 PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
-PushBranchPage_NewRemoteButton=&New Remote...
+PushBranchPage_NewRemoteButton=New &Remote...
 PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
 PushBranchPage_PageTitle=Push to branch in remote
@@ -885,10 +886,12 @@ CreateBranchWizard_NewBranchTitle=Create Branch
 CreateRepositoryPage_BareCheckbox=&Create as bare repository
 CreateRepositoryPage_BrowseButton=&Browse...
 CreateRepositoryPage_DirectoryLabel=Repository &directory:
+CreateRepositoryPage_NotADirectoryMessage=Path {0} is not a directory
 CreateRepositoryPage_NotEmptyMessage=Directory {0} is not empty
 CreateRepositoryPage_PageMessage=Determine the directory for the new repository
 CreateRepositoryPage_PageTitle=Create a New Git Repository
 CreateRepositoryPage_PleaseSelectDirectoryMessage=Select a directory
+CreateRepositoryPage_PleaseUseAbsolutePathMessage=Use an absolute path
 PushResultDialog_title=Push Results: {0}
 PushResultDialog_label=Pushed to {0}
 PushResultDialog_label_failed=Failed pushing to {0}
@@ -1041,6 +1044,8 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
+CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
+CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
@@ -1488,6 +1493,8 @@ StashEditorPage_StagedChanges=Staged Changes ({0})
 StashEditorPage_LabelParent0=HEAD:
 StashEditorPage_LabelParent1=Index:
 StashEditorPage_LabelParent2=Untracked:
+
+MultiPageEditorContentOutlinePage_NoOutline=An outline is not available.
 
 Header_contextMenu_copy=&Copy
 Header_contextMenu_copy_SHA1=Copy &SHA-1
