--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -444,15 +444,18 @@ RepositoryRemotePropertySource_RemotePushUrl_label=Remote Push URL
 
 RepositorySearchDialog_AddGitRepositories=Add Git Repositories
 RepositorySearchDialog_DeepSearch_button=&Look for nested repositories
-RepositorySearchDialog_RepositoriesFound_message={0} Git repositories found...
+RepositorySearchDialog_RepositoriesFound_message={0,choice,0#No repository|1#One repository|1<{0} repositories} found{0,choice,0# yet|0<}...\t{1}
 RepositorySearchDialog_ScanningForRepositories_message=Searching
 RepositorySearchDialog_Search=&Search
 RepositorySearchDialog_SearchCriteriaGroup=Search criteria
 RepositorySearchDialog_SearchRecursiveToolTip=If this is checked, subdirectories of already found repositories will be searched recursively
+RepositorySearchDialog_SearchResult=Found {0,choice,0#no repository|1#one repository|1<{0} repositories} scanning {1,choice,1#one folder|1<{1} folders} in {2}
 RepositorySearchDialog_SearchResultGroup=Search results
 RepositorySearchDialog_SearchTitle=Search and select Git repositories on your local file system
 RepositorySearchDialog_SearchTooltip=Performs a search with the current search criteria and updates the search result
-RepositorySearchDialog_SomeDirectoriesHiddenMessage={0} directories are hidden as they have already been added
+RepositorySearchDialog_SkipHidden=Skip &hidden directories
+RepositorySearchDialog_SkipHiddenTooltip=If this is checked hidden directories will be skipped
+RepositorySearchDialog_SomeDirectoriesHiddenMessage={0,choice,1#One repository is|1<{0} repositories are} not shown as {0,choice,1#it has|1<they have} already been added
 RepositorySearchDialog_DirectoryNotFoundMessage=Directory {0} does not exist
 RepositorySearchDialog_browse=&Browse...
 RepositorySearchDialog_CheckAllRepositories=Check All Repositories
@@ -460,7 +463,6 @@ RepositorySearchDialog_directory=&Directory:
 RepositorySearchDialog_EnterDirectoryToolTip=Enter a local file system directory from which to start the search
 RepositorySearchDialog_errorOccurred=Error occurred
 RepositorySearchDialog_NoSearchAvailableMessage=No search results available for current search criteria, click Search button to update the list
-RepositorySearchDialog_NothingFoundMessage=No Git repositories found
 RepositorySearchDialog_searchRepositoriesMessage=Search for local Git repositories on the file system
 RepositorySearchDialog_UncheckAllRepositories=Uncheck All Repositories
 RepositorySelectionPage_BrowseLocalFile=Local File...
@@ -519,6 +521,7 @@ CloneDestinationPage_promptRemoteName=Remote na&me
 CloneDestinationPage_browseButton=Bro&wse
 CloneDestinationPage_cloneSubmodulesButton=Clone &submodules
 CloneDestinationPage_DefaultRepoFolderTooltip=You can change the default parent folder in the Git preferences
+CloneDestinationPage_errorDirectoryRequired=Directory is required
 CloneDestinationPage_errorInitialBranchRequired=Initial branch is required
 CloneDestinationPage_errorInvalidRemoteName=Invalid remote name ''{0}''
 CloneDestinationPage_errorNotEmptyDir={0} is not an empty directory.
@@ -885,10 +888,12 @@ CreateBranchWizard_NewBranchTitle=Create Branch
 CreateRepositoryPage_BareCheckbox=&Create as bare repository
 CreateRepositoryPage_BrowseButton=&Browse...
 CreateRepositoryPage_DirectoryLabel=Repository &directory:
+CreateRepositoryPage_NotADirectoryMessage=Path {0} is not a directory
 CreateRepositoryPage_NotEmptyMessage=Directory {0} is not empty
 CreateRepositoryPage_PageMessage=Determine the directory for the new repository
 CreateRepositoryPage_PageTitle=Create a New Git Repository
 CreateRepositoryPage_PleaseSelectDirectoryMessage=Select a directory
+CreateRepositoryPage_PleaseUseAbsolutePathMessage=Use an absolute path
 PushResultDialog_title=Push Results: {0}
 PushResultDialog_label=Pushed to {0}
 PushResultDialog_label_failed=Failed pushing to {0}
