--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -681,7 +680,6 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
-HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -1361,7 +1359,6 @@ GitSelectRepositoryPage_AddButton=&Add...
 GitSelectRepositoryPage_AddTooltip=Add a Git repository from the local file system
 GitSelectRepositoryPage_NoRepoFoundMessage=No repositories found, please clone or add a repository
 GitSelectRepositoryPage_PageMessage=You can also clone a repository or add local repositories to the list
-GitSelectRepositoryPage_BareRepositoriesHidden=Bare repositories are not shown.
 GitSelectRepositoryPage_PageTitle=Select a Git Repository
 GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the list
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
