First commited as after_76591_rev5

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1292,6 +1292,7 @@ RepositoriesViewLabelProvider_SubmodulesNodeText=Submodules
 RepositoriesViewLabelProvider_SymbolicRefNodeText=References
 RepositoriesViewLabelProvider_TagsNodeText=Tags
 
+DialogsPreferencePage_autoConfigureLfs=Automatically configure LFS without confirmation
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
 DialogsPreferencePage_ShowInfoGroupHeader=Show result dialogs after git remote operations
@@ -1300,6 +1301,7 @@ DialogsPreferencePage_ShowPushInfoDialog=&Push Result Dialog
 DialogsPreferencePage_ShowTooltip=If unchecked, the result dialog will not be shown automatically. It will still be available via the progress view.
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
+DialogsPreferencePage_LfsConfigConfirmation=&LFS configuration confirmation
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
 DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running &launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
@@ -1402,6 +1404,13 @@ user global configuration and to define the default location to store repositori
 not correct please set the HOME environment variable and restart Eclipse. Otherwise Git for Windows and\n\
 EGit might behave differently since they see different configuration options.\n\
 This warning can be switched off on the Team > Git > Confirmations and Warnings preference page.
+ConfigurationChecker_installLfsCannotInstall=Cannot install LFS support
+ConfigurationChecker_installLfsCannotLoadConfig=Cannot load user configuration
+ConfigurationChecker_installLfsDontAsk=No, don't ask again
+ConfigurationChecker_installLfsMessage=LFS support does not seem to be enabled for this user. Do you want to install LFS support?
+ConfigurationChecker_installLfsNo=No
+ConfigurationChecker_installLfsTitle=Install LFS Support?
+ConfigurationChecker_installLfsYes=Yes
 ConfigurationEditorComponent_ConfigLocationLabel=&Location:
 ConfigurationEditorComponent_EmptyStringNotAllowed=Empty string is not allowed
 ConfigurationEditorComponent_KeyColumnHeader=Key
