First commited as after_76982_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -651,7 +651,7 @@ ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' stat
 ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
-ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.\n\nDo you want to continue?
+ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
 ResetTargetSelectionDialog_ResetQuestion=Confirm Reset
 ResetTargetSelectionDialog_ResetTitle=Reset: {0}
 ResetTargetSelectionDialog_ResetTypeGroup=Reset type
@@ -1099,10 +1099,11 @@ BranchOperationUI_CheckoutRemoteTrackingTitle=Check out remote-tracking branch
 BranchOperationUI_Continue=Continue
 BranchOperationUI_DetachedHeadTitle=Detached HEAD
 BranchOperationUI_DetachedHeadMessage=You are in the 'detached HEAD' state. This means that you don't have a local branch checked out.\n\nYou can look around, but it's not recommended to commit changes. The reason is that these commits would not be on any branch and would not be visible after checking out another branch.\n\nIf you want to make changes, create or checkout a local branch first.
-BranchOperationUI_RunningLaunchDontShowAgain=Don't show this warning again
-BranchOperationUI_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository. Continue branch switch?
-BranchOperationUI_RunningLaunchTitle=Running Launch
-BranchOperationUI_SearchLaunchConfiguration=Search running launch configuration
+LaunchFinder_RunningLaunchDontShowAgain=Don't show this warning again
+LaunchFinder_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository.
+LaunchFinder_RunningLaunchTitle=Running Launch
+LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
+LaunchFinder_ContinueQuestion=Continue all the same?
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
@@ -1284,7 +1285,7 @@ DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
-DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored. Are you sure you want to do this?
+DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
 Disconnect_disconnect=Disconnect
 
