First commited as before_76983_rev4

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,7 +188,8 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindTooltip=Show Find Toolbar
+GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
+GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -327,9 +328,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
@@ -651,7 +652,7 @@ ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' stat
 ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
-ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
+ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.\n\nDo you want to continue?
 ResetTargetSelectionDialog_ResetQuestion=Confirm Reset
 ResetTargetSelectionDialog_ResetTitle=Reset: {0}
 ResetTargetSelectionDialog_ResetTypeGroup=Reset type
@@ -680,6 +681,7 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
+HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -963,7 +965,7 @@ FetchGerritChangePage_LocalBranchCheckout=Checkout new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
-RunInBackground_label=&Run in background
+FetchGerritChangePage_RunInBackground=&Run in background
 FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and checkout a &tag
@@ -1045,6 +1047,8 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
+CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
+CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
@@ -1099,11 +1103,10 @@ BranchOperationUI_CheckoutRemoteTrackingTitle=Check out remote-tracking branch
 BranchOperationUI_Continue=Continue
 BranchOperationUI_DetachedHeadTitle=Detached HEAD
 BranchOperationUI_DetachedHeadMessage=You are in the 'detached HEAD' state. This means that you don't have a local branch checked out.\n\nYou can look around, but it's not recommended to commit changes. The reason is that these commits would not be on any branch and would not be visible after checking out another branch.\n\nIf you want to make changes, create or checkout a local branch first.
-LaunchFinder_RunningLaunchDontShowAgain=Don't show this warning again
-LaunchFinder_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository.
-LaunchFinder_RunningLaunchTitle=Running Launch
-LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
-LaunchFinder_ContinueQuestion=Continue all the same?
+BranchOperationUI_RunningLaunchDontShowAgain=Don't show this warning again
+BranchOperationUI_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository. Continue branch switch?
+BranchOperationUI_RunningLaunchTitle=Running Launch
+BranchOperationUI_SearchLaunchConfiguration=Search running launch configuration
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
@@ -1285,7 +1288,7 @@ DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
-DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
+DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored. Are you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
 Disconnect_disconnect=Disconnect
 
