First commited as after_76994_rev2

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -23,6 +23,7 @@ ConnectProviderOperation_NoRepositoriesError=Error connecting project {0}, no Gi
 ConnectProviderOperation_UnexpectedRepositoryError=Error connecting project {0}, suggested path ''{1}'' do not match found Git repositories ''{2}''.
 ContainerTreeIterator_DeletedFile=Deleted file: ''{0}''
 
+DeleteBranchOperation_Canceled=Deletion of branches canceled
 DeleteBranchOperation_TaskName=Deleting branch {0}
 DeleteTagOperation_exceptionMessage=Exception deleting tag ''{0}''
 DiffHeaderFormat_Email=Git (e-mail header)
