First commited as before_77483_rev2

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -327,9 +327,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
