First commited as after_77594_rev3

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1866,6 +1866,7 @@ SubmoduleSyncCommand_SyncError=Submodule configuration sync error
 SubmoduleSyncCommand_Title=Synchronized submodule configuration
 SubmoduleUpdateCommand_Title=Updating submodules
 SubmoduleUpdateCommand_UpdateError=Submodule update error
+SubmoduleUpdateCommand_UncommittedChanges=Cannot Update Submodule Repository ''{0}''
 
 SynchronizeWithMenu_custom=&Custom...
 SynchronizeFetchJob_JobName=Fetching changes before synchronization launch
