First commited as before_77727_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1273,6 +1273,10 @@ RepositoriesViewLabelProvider_TagsNodeText=Tags
 
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
+DialogsPreferencePage_HideInfoGroupHeader=Show Dialog on Success
+DialogsPreferencePage_HideFetchInfoDialog=Fetch
+DialogsPreferencePage_HidePushInfoDialog=Push
+DialogsPreferencePage_HidePullInfoDialog=Pull
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
@@ -1359,7 +1363,6 @@ GitSelectRepositoryPage_AddButton=&Add...
 GitSelectRepositoryPage_AddTooltip=Add a Git repository from the local file system
 GitSelectRepositoryPage_NoRepoFoundMessage=No repositories found, please clone or add a repository
 GitSelectRepositoryPage_PageMessage=You can also clone a repository or add local repositories to the list
-GitSelectRepositoryPage_BareRepositoriesHidden=Bare repositories are not shown.
 GitSelectRepositoryPage_PageTitle=Select a Git Repository
 GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the list
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
