First commited as after_77727_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -974,6 +974,8 @@ FetchResultDialog_ConfigureButton=&Configure...
 FetchResultDialog_labelEmptyResult=No ref to fetch from {0} - everything up to date.
 FetchResultDialog_labelNonEmptyResult=Fetched from {0}.
 FetchResultDialog_title=Fetch Results: {0}
+FetchResultDialog_HideDialog=&Don't show this dialog again
+FetchResultDialog_HideDialogButton=Hide this dialog in the future
 
 FetchResultTable_counterCommits=\ ({0})
 FetchResultTable_statusDetailCouldntLock=couldn't lock local tracking ref for update
@@ -1282,6 +1284,7 @@ DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
 DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
+DialogsPreferencePage_HideFetchSuccessCheckbox=Hide fetch result dialog
 DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
 DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
