First commited as after_79039_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1046,6 +1046,7 @@ CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
+CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
